# searchforjunk

./: Cargo.toml
src/: main.rs
src/filesindex/: file_indexer_config.rs  file_indexer_core.rs  mod.rs
src/filesindex/api/: controller.rs  mod.rs
src/filesindex/api/dtos/: file_dto.rs
src/filesindex/api/dtos/input/: file_dto_input.rs  mod.rs  query_dto_input.rs
src/filesindex/api/dtos/output/: file_dto_output.rs  mod.rs
src/filesindex/infrastructure/: mod.rs
src/filesindex/infrastructure/searchindex/: file_indexer.rs  mod.rs  service.rs
src/filesindex/infrastructure/searchindex/converters/: date_converter.rs  doc_to_dto.rs  mod.rs  path_to_facet.rs
src/filesindex/infrastructure/searchindex/models/: mod.rs  query_result_model.rs
src/filesindex/infrastructure/searchindex/queue/: index_worker.rs  mod.rs
src/filesindex/infrastructure/searchindex/schemas/: file_schema.rs  mod.rs
src/filesindex/infrastructure/searchindex/scorers/: mod.rs  pop_scorer.rs
src/filesindexer/: indexer.rs  mod.rs  schemacreator.rs
src/tantivy_file_indexer/: mod.rs  service_container.rs
src/tantivy_file_indexer/services/app_save/: tauri_exports.rs
src/tantivy_file_indexer/services/local_crawler/: tauri_exports.rs
src/tantivy_file_indexer/services/local_db/tables/files/: tauri_exports.rs
src/tantivy_file_indexer/services/search_index/: service.rs  tauri_exports.rs
src/tantivy_file_indexer/services/vevtor/core/indexer_api/infrastructure/: db_manager.rs
src/tantivy_file_indexer/services/vevtor/models/: file_model.rs
