[package]
name = "filesindex"
version = "0.1.0"
edition = "2021"

[profile.dev]
incremental = true
opt-level = 0

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
levenshtein = "1.0"
strsim = "0.11.1"
tantivy = "0.22.0"
actix-web = "4"
tokio = { version = "1", features = ["full"] }
anyhow = { version = "1.0", default-features = false }
chrono = "0.4"