[package]
name = "filesindex"
version = "0.1.0"
edition = "2021"

[profile.dev]
incremental = true
opt-level = 0

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
winapi = { version = "0.3", features = ["fileapi", "handleapi", "minwinbase"] }
tokio = { version = "1", features = ["full"] }
dirs = "5.0"
tantivy = "0.22.0"
walkdir = "2.3"
refind = "0.1.2"
rayon = "1.5"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3.31"
sqlx = { version = "0.6", features = ["sqlite", "macros", "runtime-tokio-native-tls"] }
crossbeam = "0.8"
# stuff for vevtor:
fastembed = "4.0.0"
qdrant-client = "1.12.1"
tonic = "0.12.3"
twox-hash = "2.0.1"
actix-cors = "0.7.0"